pluck 4.7
----------------------------------------
 - Fix multiple path disclosure vulnerabilities (http://www.htbridge.ch/advisory/path_disclosure_in_pluck_cms.html and http://www.htbridge.ch/advisory/path_disclosure_in_pluck_cms_1.html)

pluck 4.7 beta
----------------------------------------
 - Added SEO-urls
 - Added support for sub pages
 - New module system with hooks
 - Added requirements check, to check server configuration before install
 - Added possibility to remove themes
 - Changed language variables into one language array
 - Add brute force protection to login page
 - Lots of optimizations and bug fixes
 - [albums] Included SmartImage class for better image handling
 - [albums] Included option to choose resize dimensions, or disable disable automatic resizing
 - [albums] Added possibility to choose which album should be added to a page
 - [blog] Included option to truncate posts
 - [blog] Included pagination for blog posts
 - [blog] Included option to disable visitor commenting
 - [blog] Included option to choose time and date format
 - [blog] Added possibility to choose which blog category should be added to a page
 - [multitheme] New module, allowing the user to choose different themes for each page.
 - [tinymce] Moved TinyMCE to a module

pluck 4.6.4
----------------------------------------
 - Replace ereg() and split() functions with PHP 5.3 compatible alternatives.
 - Fix security issue (http://www.htbridge.ch/advisory/xss_vulnerability_in_pluck.html)
 - Prevent Cross-site Request Forgery.
 - Added support for security token. Fixes bug #406129
 - Check email address validity during installation.

pluck 4.6.3
----------------------------------------
- [security] fix security vulnerability (http://secunia.com/advisories/35145/)
- improve module_is_compatible() function, to allow point-releases if a major release has been specified

pluck 4.6.2
----------------------------------------