@@ -1,0 +1,7 @@
+Icons from GNOME and other GNOME projects, licensed GPL.
+	You can visit the GNOME website here:
+		http://www.gnome.org/
+
+Icons from the Tango project are public domain.
+	You can visit the Tango project website here:
+		http://tango.freedesktop.org/Tango_Desktop_Project
