@@ -157,7 +157,9 @@ if ($langpref != 'en.php') {
 	<br />
 	<a href="http://www.dolem.com/lytebox" target="_blank">Markus F. Hay</a>, <?php echo $lang['credits']['lytebox']; ?>
 	<br />
-	<a href="http://tango.freedesktop.org" target="_blank">The Tango Desktop Project</a>, <?php echo $lang['credits']['tango']; ?>
+	<a href="http://www.gnome.org" target="_blank">Gnome</a> &amp; <a href="http://tango.freedesktop.org" target="_blank">Tango</a> projects, <?php echo $lang['credits']['tango']; ?>
+	<?php /* Silk icons not used in pluck anymore
 	<br />
-	<a href="http://www.famfamfam.com/lab/icons/silk/" target="_blank">Mark James</a>, <?php echo $lang['credits']['slik']; ?>
+	<a href="http://www.famfamfam.com/lab/icons/silk/" target="_blank">Mark James</a>, <?php echo $lang['credits']['slik']; ?> */
+	?>
 </p>
